--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 pyTelegramBotAPI==4.27.0  # Для telebot
 requests==2.32.3          # Для работы с HTTP-запросами
 python-dotenv==1.0.0
+Flask==3.1.0
